# bi-chaos-lab

./: README.md  live-enterprise-state.json  live-enterprise-tableau-state.json  new-tenant-powerbi-state.json  old-tenant-powerbi-state.json  pyproject.toml
bi_chaos_lab/: __init__.py  __main__.py  cli.py  http.py  manifest.py  scenario_engine.py  state.py
bi_chaos_lab/providers/: base.py  powerbi.py  tableau.py
examples/: manifest.enterprise.expanded-tableau-only.json  manifest.enterprise.expanded-v2.json  manifest.enterprise.expanded-v3.json  manifest.enterprise.expanded.json  manifest.enterprise.json  manifest.enterprise.live.json  manifest.enterprise.powerbi-move.json  manifest.enterprise.tableau-live.json  manifest.powerbi-calibration-10-13.json  manifest.powerbi-calibration-11-14.json  manifest.powerbi-calibration-9-12.json
templates/tableau/: executive-datasource.tdsx  marketing-datasource.tdsx
tests/: test_manifest.py  test_scenario_engine.py  test_state.py
