[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bi-chaos-lab"
version = "0.1.0"
description = "Manifest-driven Power BI and Tableau enterprise landscape generator"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
bi-chaos-lab = "bi_chaos_lab.cli:main"

[tool.setuptools]
packages = ["bi_chaos_lab", "bi_chaos_lab.providers"]
